manifests/ns-n8n/recipes/n8n.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/proxy-body-size: 128m

    cert-manager.io/issuer: letsencrypt-prod

    # For Cloudflare proxied entries, set the TTL annotation to 1 (automatic), or do not set it.
    external-dns.alpha.kubernetes.io/ttl: "1"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  tls:
    - hosts:
        - n8n.unchartedsky.com
      secretName: tls-n8n
  rules:
    - host: n8n.unchartedsky.com
      http:
        paths:
          - path: /
            backend:
              serviceName: n8n
              servicePort: 5679
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  # type: NodePort
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 5679
      targetPort: 5679
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: data
              mountPath: /root/
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "2000m"
              memory: "1024Mi"
        - name: oauth2-proxy
          image: quay.io/pusher/oauth2_proxy:latest
          imagePullPolicy: Always
          args:
            - "--email-domain=*"
            - "--github-org=unchartedsky"
            - "--github-team=team7"
            - "--upstream=http://0.0.0.0:5678"
            - "--approval-prompt=auto"
            - "--redirect-url=https://n8n.unchartedsky.com/oauth2/callback"
            - "--cookie-secret=$(COOKIE_SECRET)"
            - "--cookie-secure=false"
            - "--cookie-refresh=1h"
            - "--cookie-name=_oauth2_proxy_n8n_unchartedsky_com"
            - "--provider=github"
            - "--client-id=$(OAUTH_CLIENT_ID)"
            - "--client-secret=$(OAUTH_SECRET_KEY)"
            - "--http-address=0.0.0.0:5679"
          ports:
            - containerPort: 5679
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n
